--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "formik": "^2.4.5",
     "mdb-react-ui-kit": "^7.0.0",
     "react": "^18.2.0",
