--- a/package.json
+++ b/package.json
@@ -8,18 +8,28 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
+    "@popperjs/core": "^2.11.8",
+    "@tabler/icons": "^2.44.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "cdbreact": "^1.5.18",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "formik": "^2.4.5",
     "mdb-react-ui-kit": "^7.0.0",
+    "mui-datatables": "^4.3.0",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
+    "react-redux": "^9.0.4",
     "react-scripts": "5.0.1",
     "reactjs-localstorage": "^1.0.1",
+    "store": "^2.0.12",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
