--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@mui/icons-material": "^5.15.1",
+    "@mui/joy": "^5.0.0-beta.19",
     "@mui/material": "^5.15.1",
     "@popperjs/core": "^2.11.8",
     "@tabler/icons": "^2.44.0",
